--- a/karir.html
+++ b/karir.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karir | Assistenku</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 <header>
   <div class="navbar">
-    <img src="logo.png" class="logo" alt="Logo Assistenku">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="profil.html">Profil</a></li>
-        <li><a href="layanan.html">Layanan</a></li>
-        <li><a href="karir.html" class="active">Karir</a></li>
-        <li><a href="kontak.html">Kontak</a></li>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir" class="active">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
       </ul>
     </nav>
 
@@ -26,138 +26,149 @@
   </div>
 
   <div id="mobileMenu">
-    <a href="index.html">Beranda</a>
-    <a href="profil.html">Profil</a>
-    <a href="layanan.html">Layanan</a>
-    <a href="karir.html">Karir</a>
-    <a href="kontak.html">Kontak</a>
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
 <section style="padding-top:130px;">
   <h2>Karir di Assistenku</h2>
   <p>
-    Assistenku membuka kesempatan bagi tenaga kerja yang ingin bergabung sebagai tenaga asistensi
-    profesional. Kami berkomitmen memberikan pelatihan, pembinaan, dan kesempatan kerja yang stabil
-    bagi setiap kandidat yang memenuhi kualifikasi. Berikut daftar lowongan yang tersedia:
+    Assistenku membuka peluang karir bagi tenaga kerja yang ingin berkembang secara profesional,
+    memiliki komitmen terhadap pelayanan, dan siap menjalani standar kerja modern.  
+    Kami percaya bahwa SDM adalah fondasi utama layanan kami. 
+    Setiap kandidat yang bergabung akan mendapatkan arahan, pembinaan, dan kesempatan kerja berkelanjutan 
+    yang aman dan sesuai peraturan ketenagakerjaan.
+  </p>
+
+  <p>
+    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat.  
+    Kami selalu mencari individu yang terpercaya, jujur, sopan, dan memiliki semangat belajar tinggi.
   </p>
 </section>
 
 <section>
+  <h2>Lowongan Tersedia</h2>
+
   <div class="card-grid">
 
     <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Posisi ini ditujukan bagi kandidat yang siap bekerja mengelola kebutuhan rumah tangga harian.</p>
-
-      <h4>Tugas & Tanggung Jawab:</h4>
+      <p>
+        Membantu keluarga dalam menjaga kebersihan, kerapian, dan kenyamanan rumah.
+        Cocok untuk kandidat yang disiplin dan cekatan.
+      </p>
+      <h4>Tugas:</h4>
       <ul>
-        <li>Membersihkan area rumah setiap hari</li>
-        <li>Mencuci dan menyetrika pakaian</li>
-        <li>Menata dan merapikan ruangan</li>
-        <li>Membantu tugas dasar dapur</li>
+        <li>Membersihkan rumah harian</li>
+        <li>Mencuci & menyetrika</li>
+        <li>Masakan dasar</li>
         <li>Mengelola kebutuhan rumah tangga</li>
       </ul>
 
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Perempuan, rajin, jujur, dan disiplin</li>
-        <li>Pengalaman lebih disukai, pemula diterima</li>
-        <li>Bisa bekerja dengan instruksi</li>
-        <li>Siap tinggal di tempat atau pulang-pergi</li>
+        <li>Usia minimal 18 tahun</li>
+        <li>Sehat jasmani</li>
+        <li>Berkomitmen dan disiplin</li>
+        <li>Jujur dan sopan</li>
       </ul>
     </div>
 
-    <!-- Caregiver -->
+    <!-- CAREGIVER -->
     <div class="card">
       <h3>Caregiver / Pendamping Lansia</h3>
-      <p>Membantu merawat lansia dengan perhatian, ketelatenan, dan pemantauan kesehatan harian.</p>
-
-      <h4>Tugas & Tanggung Jawab:</h4>
+      <p>
+        Merawat dan mendampingi lansia dengan penuh kesabaran serta tanggung jawab.
+      </p>
+      <h4>Tugas:</h4>
       <ul>
-        <li>Membantu kebersihan diri lansia</li>
-        <li>Mengatur jadwal obat</li>
-        <li>Menyiapkan keperluan harian lansia</li>
-        <li>Mendampingi aktivitas ringan</li>
-        <li>Memantau kondisi fisik lansia</li>
+        <li>Membantu aktivitas harian lansia</li>
+        <li>Mengawasi jadwal obat</li>
+        <li>Membantu mobilitas lansia</li>
+        <li>Menjaga keamanan & kenyamanan</li>
       </ul>
 
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Perempuan atau laki-laki yang telaten</li>
-        <li>Pengalaman merawat lansia sangat diutamakan</li>
-        <li>Komunikatif dan sabar</li>
-        <li>Sehat jasmani dan rohani</li>
+        <li>Usia 20–45 tahun</li>
+        <li>Sehat jasmani</li>
+        <li>Memiliki rasa empati tinggi</li>
+        <li>Tidak mudah emosi</li>
       </ul>
     </div>
 
-    <!-- Driver -->
+    <!-- SOPIR -->
     <div class="card">
       <h3>Sopir Pribadi</h3>
-      <p>Diperuntukkan bagi pengemudi berpengalaman, beretika, dan memahami rute dengan baik.</p>
-
-      <h4>Tugas & Tanggung Jawab:</h4>
+      <p>
+        Mengemudi untuk kebutuhan keluarga atau perusahaan dengan aman dan profesional.
+      </p>
+      <h4>Tugas:</h4>
       <ul>
-        <li>Mengemudi dan mengantar keluarga atau perusahaan</li>
-        <li>Menjaga kebersihan kendaraan</li>
-        <li>Memastikan kelayakan kendaraan sebelum dipakai</li>
-        <li>Mengemudi dengan aman, sopan, dan sesuai aturan</li>
+        <li>Antar jemput harian</li>
+        <li>Perawatan kendaraan dasar</li>
+        <li>Memahami rute & navigasi</li>
+        <li>Mengemudi defensif dan sopan</li>
       </ul>
 
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Laki-laki berpengalaman mengemudi</li>
-        <li>Paham rute kota</li>
-        <li>Mampu bekerja fleksibel</li>
-        <li>Memiliki SIM A/B aktif</li>
+        <li>Memiliki SIM A aktif</li>
+        <li>Berpengalaman mengemudi</li>
+        <li>Disiplin waktu</li>
+        <li>Berperilaku sopan & tenang</li>
       </ul>
     </div>
 
-    <!-- Penjaga Toko -->
+    <!-- PENJAGA TOKO -->
     <div class="card">
       <h3>Penjaga Toko</h3>
       <p>
-        Dicari tenaga penjaga toko yang siap membantu operasional harian, melayani konsumen,
-        dan memastikan toko berjalan tertib.
+        Menangani operasional toko harian dan pelayanan pelanggan.
       </p>
-
-      <h4>Tugas & Tanggung Jawab:</h4>
+      <h4>Tugas:</h4>
       <ul>
-        <li>Melayani pelanggan dengan ramah</li>
-        <li>Menjaga kebersihan dan kerapian toko</li>
-        <li>Mencatat stok dan mengelola barang</li>
-        <li>Menangani transaksi dasar (jika diperlukan)</li>
+        <li>Melayani pembeli</li>
+        <li>Menata barang</li>
+        <li>Mencatat stok</li>
+        <li>Menjaga kebersihan area kerja</li>
       </ul>
 
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Pria/wanita usia kerja</li>
-        <li>Berpenampilan rapi dan sopan</li>
-        <li>Komunikatif dan jujur</li>
-        <li>Bersedia bekerja shift</li>
+        <li>Ramah & komunikatif</li>
+        <li>Teliti & rapi</li>
+        <li>Mampu bekerja berdiri</li>
+        <li>Jujur & bertanggung jawab</li>
       </ul>
     </div>
 
-    <!-- Asistensi Lainnya -->
+    <!-- ASISTEN PRIBADI -->
     <div class="card">
-      <h3>Asistensi Lainnya</h3>
-      <p>Meliputi asisten pribadi, kurir internal, office helper, dan tenaga operasional.</p>
+      <h3>Asisten Pribadi / Helper</h3>
+      <p>
+        Tugas operasional ringan seperti kurir internal, admin sederhana, dan bantuan aktivitas harian.
+      </p>
 
-      <h4>Tugas & Tanggung Jawab:</h4>
+      <h4>Tugas:</h4>
       <ul>
-        <li>Membantu administrasi ringan</li>
-        <li>Mengelola dokumen kantor</li>
-        <li>Mengirim barang internal</li>
-        <li>Membantu operasional sesuai kebutuhan perusahaan</li>
+        <li>Membantu administrasi</li>
+        <li>Mengantar dokumen</li>
+        <li>Mengelola kebutuhan operasional</li>
+        <li>Back-up tugas kantor/rumah</li>
       </ul>
 
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Laki-laki atau perempuan</li>
-        <li>Disiplin dan bertanggung jawab</li>
-        <li>Mampu bekerja mandiri</li>
-        <li>Bersedia ditempatkan sesuai kebutuhan</li>
+        <li>Pandai berkomunikasi</li>
+        <li>Cekatan & bisa multitasking</li>
+        <li>Disiplin & tertata</li>
+        <li>Berpenampilan rapi</li>
       </ul>
     </div>
 
@@ -165,16 +176,16 @@
 </section>
 
 <section>
-  <h2>Akses Berkas Rekrutmen</h2>
-  <p>Tekan tombol berikut untuk membuka formulir atau informasi rekrutmen lengkap:</p>
+  <h2>Akses Informasi Sistem Gaji</h2>
+  <p>Klik tombol berikut setelah membuka kunci akses:</p>
 
-  <button id="karirBtn" class="lock-button locked">🔒 Akses Terkunci</button>
+  <button id="lockKarirBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
 
 <footer>
   © 2025 Assistenku
 </footer>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
-                                                   </html>
+  </html>
