--- a/layanan.html
+++ b/layanan.html
@@ -6,7 +6,6 @@
   <title>Layanan | Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
-
 <body>
 
 <header>
@@ -35,6 +34,7 @@
   </div>
 </header>
 
+
 <section style="padding-top:130px;">
   <h2>Layanan Assistenku</h2>
   <p>
@@ -44,6 +44,7 @@
   </p>
 </section>
 
+
 <section>
   <div class="card-grid">
 
@@ -51,7 +52,7 @@
       <h3>Asisten Rumah Tangga (ART)</h3>
       <p>
         Layanan ART membantu keluarga dalam menjaga kebersihan, kerapian, dan pengelolaan rumah tangga
-        dengan standar kerja yang lebih modern dan terstruktur.
+        dengan standar kerja yang modern dan terstruktur.
       </p>
       <ul>
         <li>Pembersihan rumah</li>
@@ -64,8 +65,7 @@
     <div class="card">
       <h3>Caregiver</h3>
       <p>
-        Memberikan pendampingan dan perawatan harian kepada lansia dengan empati dan tanggung jawab penuh,
-        membantu keluarga memastikan keselamatan dan kenyamanan orang tua mereka.
+        Memberikan pendampingan dan perawatan harian kepada lansia dengan empati dan tanggung jawab penuh.
       </p>
       <ul>
         <li>Perawatan harian</li>
@@ -117,12 +117,27 @@
   </div>
 </section>
 
+
 <section>
   <h2>Akses Dokumen Layanan</h2>
-  <p>Tekan tombol berikut untuk membuka panduan biaya layanan:</p>
 
+  <p>Gunakan tombol berikut untuk membuka informasi:</p>
+
+  <!-- ISLAND BUTTONS -->
+  <button class="island-btn" id="btnBiayaLayanan">
+    Buka Biaya Layanan
+  </button>
+
+  <button class="island-btn" id="btnUnduhFormulir">
+    Unduh Formulir Layanan
+  </button>
+
+  <br><br>
+
+  <!-- FOOTER LOCK BUTTON -->
   <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
+
 
 <footer>© 2025 Assistenku</footer>
 
