--- a/index.html
+++ b/index.html
@@ -11,27 +11,23 @@
 
 <header>
   <div class="navbar">
+
     <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
-    <nav>
-      <ul>
-        <li><a href="/" class="active">Beranda</a></li>
-        <li><a href="/profil">Profil</a></li>
-        <li><a href="/layanan">Layanan</a></li>
-        <li><a href="/karir">Karir</a></li>
-        <li><a href="/kontak">Kontak</a></li>
-      </ul>
+    <nav class="nav-links">
+      <a href="/" class="active">Beranda</a>
+      <a href="/profil">Profil</a>
+      <a href="/layanan">Layanan</a>
+      <a href="/karir">Karir</a>
+      <a href="/kontak">Kontak</a>
     </nav>
 
-    <div id="menuIcon">☰</div>
-  </div>
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 
-  <div id="mobileMenu">
-    <a href="/">Beranda</a>
-    <a href="/profil">Profil</a>
-    <a href="/layanan">Layanan</a>
-    <a href="/karir">Karir</a>
-    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
@@ -43,8 +39,7 @@
     yang tertata, aman, dan dapat diandalkan.
 
     Dengan standar kualitas tinggi, proses yang sederhana, tenaga kerja yang terlatih, serta komitmen pelayanan yang
-    konsisten, Assistenku hadir sebagai solusi yang ramah, aman, dan profesional. Kami memahami bahwa setiap keluarga
-    dan usaha memiliki kebutuhan yang berbeda, sehingga semua layanan dirancang fleksibel dan mudah diakses kapan pun Anda memerlukannya.
+    konsisten, Assistenku hadir sebagai solusi yang ramah, aman, dan profesional.
   </p>
 
   <a href="/layanan" class="btn-primary">Lihat Layanan</a>
