--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assistenku</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -34,12 +34,8 @@
 <section class="hero">
   <h1>Selamat Datang di Assistenku</h1>
   <p>
-    Assistenku merupakan layanan asistensi modern yang didirikan untuk membantu keluarga, individu, maupun bisnis
-    dalam memenuhi kebutuhan sumber daya manusia harian. Kami percaya bahwa kenyamanan hidup dimulai dari lingkungan
-    yang tertata, aman, dan dapat diandalkan.
-
-    Dengan standar kualitas tinggi, proses yang sederhana, tenaga kerja yang terlatih, serta komitmen pelayanan yang
-    konsisten, Assistenku hadir sebagai solusi yang ramah, aman, dan profesional.
+    Assistenku merupakan layanan asistensi modern untuk keluarga dan bisnis.
+    Dengan proses sederhana, tenaga kerja terlatih, dan pelayanan profesional.
   </p>
 
   <a href="/layanan" class="btn-primary">Lihat Layanan</a>
