--- a/layanan.html
+++ b/layanan.html
@@ -2,15 +2,18 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta-name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Layanan | Assistenku</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
 
 <header>
+  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
+
   <div class="navbar">
-    <img src="/logo.png" class="logo">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
@@ -34,113 +37,143 @@
   </div>
 </header>
 
+<!-- =============================
+     LAYANAN - SECTION
+============================= -->
 
-<section style="padding-top:130px;">
-  <h2>Layanan Assistenku</h2>
+<section style="padding-top:160px;">
+  <h1>Layanan Kami</h1>
   <p>
-    Assistenku menyediakan berbagai layanan asistensi profesional yang dirancang untuk membantu keluarga
-    dan bisnis menjalankan aktivitas harian dengan lebih mudah. Proses seleksi ketat memastikan setiap tenaga
-    kerja memiliki kemampuan, etika, dan kualitas pelayanan yang dapat dipercaya.
+    Assistenku menyediakan berbagai layanan asistensi yang dirancang untuk mempermudah aktivitas
+    rumah tangga, kebutuhan pribadi, hingga pendampingan profesional. Setiap layanan dibangun
+    dengan standar tinggi, proses seleksi yang ketat, dan pelatihan yang terstruktur, agar
+    setiap klien merasakan kenyamanan, keamanan, dan profesionalitas.
   </p>
 </section>
 
+<!-- =============================
+     GRID LAYANAN
+============================= -->
 
 <section>
+  <h2>Daftar Layanan</h2>
+
   <div class="card-grid">
 
+    <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
       <p>
-        Layanan ART membantu keluarga dalam menjaga kebersihan, kerapian, dan pengelolaan rumah tangga
-        dengan standar kerja yang modern dan terstruktur.
+        Tenaga kerja terlatih untuk membantu pekerjaan rumah harian. Cocok untuk keluarga yang
+        membutuhkan bantuan jangka panjang ataupun jangka pendek.
       </p>
       <ul>
         <li>Pembersihan rumah</li>
         <li>Mencuci & menyetrika</li>
-        <li>Masakan dasar</li>
-        <li>Pengelolaan perlengkapan rumah</li>
+        <li>Memasak dasar</li>
+        <li>Mengelola kebutuhan rumah tangga</li>
       </ul>
+      <a href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART."
+         class="btn-primary">Pesan Sekarang</a>
     </div>
 
+    <!-- BABY SITTER -->
     <div class="card">
-      <h3>Caregiver</h3>
+      <h3>Baby Sitter</h3>
       <p>
-        Memberikan pendampingan dan perawatan harian kepada lansia dengan empati dan tanggung jawab penuh.
+        Tenaga profesional yang terlatih dalam merawat bayi dan balita dengan pendekatan lembut,
+        penuh perhatian, serta memahami standar kesehatan bayi.
       </p>
       <ul>
-        <li>Perawatan harian</li>
-        <li>Mengelola jadwal obat</li>
-        <li>Mendampingi aktivitas lansia</li>
-        <li>Monitoring kondisi fisik</li>
+        <li>Perawatan harian bayi/balita</li>
+        <li>Pendamping aktivitas</li>
+        <li>Pemantauan pola makan & istirahat</li>
+        <li>Kebersihan area bayi</li>
       </ul>
+      <a href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter."
+         class="btn-primary">Pesan Sekarang</a>
     </div>
 
+    <!-- LANSIA -->
     <div class="card">
-      <h3>Sopir Pribadi</h3>
+      <h3>Pendamping Lansia</h3>
       <p>
-        Layanan sopir profesional untuk kebutuhan keluarga maupun bisnis, dengan standar berkendara aman,
-        sopan, serta memahami rute dengan baik.
+        Didesain untuk mendampingi dan membantu orang tua/lansia dengan pendekatan penuh empati
+        dan kesabaran. Tersedia layanan non-medis.
       </p>
       <ul>
-        <li>Antar jemput harian</li>
-        <li>Perawatan kendaraan dasar</li>
-        <li>Memahami rute & navigasi</li>
-        <li>Mengemudi defensif</li>
+        <li>Pendamping harian</li>
+        <li>Membantu aktivitas ringan</li>
+        <li>Pendamping jalan & kontrol</li>
+        <li>Sahabat bicara & pengawasan</li>
       </ul>
+      <a href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Pendamping%20Lansia."
+         class="btn-primary">Pesan Sekarang</a>
     </div>
 
+    <!-- OFFICE BOY -->
     <div class="card">
-      <h3>Penjaga Toko</h3>
+      <h3>Office Boy / Office Girl</h3>
       <p>
-        Menangani operasional toko dan pelayanan pelanggan dengan rapi, disiplin, dan profesional.
+        Tenaga kerja untuk kebutuhan kantor, toko, gudang, maupun usaha kecil.
+        Menjaga kebersihan dan membantu pekerjaan operasional ringan.
       </p>
       <ul>
-        <li>Melayani pembeli</li>
-        <li>Menata barang</li>
-        <li>Stok barang</li>
-        <li>Menjaga kebersihan area kerja</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h3>Asistensi Lainnya</h3>
-      <p>
-        Asisten pribadi, helper, kurir internal, dan berbagai bantuan operasional lain untuk kebutuhan rumah atau kantor.
-      </p>
-      <ul>
-        <li>Admin ringan</li>
-        <li>Kurir dokumen</li>
+        <li>Pembersihan area kantor</li>
+        <li>Penyediaan minuman</li>
+        <li>Pengepel & pengelapan</li>
         <li>Bantuan operasional</li>
       </ul>
+      <a href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Office%20Boy/Girl."
+         class="btn-primary">Pesan Sekarang</a>
+    </div>
+
+    <!-- DRIVER -->
+    <div class="card">
+      <h3>Pengemudi Pribadi</h3>
+      <p>
+        Pengemudi berpengalaman untuk kebutuhan harian atau sementara. Mengutamakan keamanan,
+        ketepatan waktu, dan kenyamanan dalam perjalanan.
+      </p>
+      <ul>
+        <li>Pengemudi harian</li>
+        <li>Pengemudi keluarga</li>
+        <li>Perjalanan dinas</li>
+        <li>Keamanan dan etika berkendara</li>
+      </ul>
+      <a href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20Driver."
+         class="btn-primary">Pesan Sekarang</a>
     </div>
 
   </div>
 </section>
 
+<!-- =============================
+     CATATAN TAMBAHAN
+============================= -->
 
 <section>
-  <h2>Akses Dokumen Layanan</h2>
+  <h2>Catatan & Kebijakan</h2>
 
-  <p>Gunakan tombol berikut untuk membuka informasi:</p>
+  <p>
+    Seluruh tenaga kerja telah melalui proses seleksi, wawancara, dan pemeriksaan latar belakang.
+    Untuk tenaga khusus seperti baby sitter dan pendamping lansia, tersedia pelatihan tambahan.
+  </p>
 
-  <!-- ISLAND BUTTONS -->
-  <button class="island-btn" id="btnBiayaLayanan">
-    Buka Biaya Layanan
-  </button>
+  <p>
+    Assistenku menjaga keamanan, kenyamanan, dan komunikasi dua arah agar hubungan antara klien
+    dan tenaga kerja berjalan harmonis serta saling menghormati.
+  </p>
 
-  <button class="island-btn" id="btnUnduhFormulir">
-    Unduh Formulir Layanan
-  </button>
-
-  <br><br>
-
-  <!-- FOOTER LOCK BUTTON -->
-  <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
+  <p>
+    Lama kontrak, jadwal kerja, area penempatan, dan detail tugas dapat disesuaikan dengan
+    kebutuhan klien.
+  </p>
 </section>
-
 
 <footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
+
 </body>
 </html>
