--- a/karir.html
+++ b/karir.html
@@ -2,15 +2,18 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta-name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karir | Assistenku</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
 
 <header>
+  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
+
   <div class="navbar">
-    <img src="/logo.png" class="logo">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
@@ -35,136 +38,230 @@
 </header>
 
 
-<section style="padding-top:130px;">
-  <h2>Karir di Assistenku</h2>
+<!-- =============================
+     HERO
+============================= -->
+<section style="padding-top:160px;">
+  <h1>Karir di Assistenku</h1>
+
   <p>
-    Assistenku membuka peluang karir bagi tenaga kerja yang ingin berkembang secara profesional, 
-    memiliki komitmen terhadap pelayanan, dan siap menjalani standar kerja modern.
+    Assistenku membuka kesempatan bagi tenaga kerja yang memiliki semangat, kejujuran,
+    dan keinginan untuk berkembang. Kami percaya bahwa setiap individu berhak mendapatkan
+    peluang yang jelas, proses rekrutmen yang manusiawi, serta lingkungan kerja yang aman.
   </p>
+
   <p>
-    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat. 
-    Kami selalu mencari individu yang terpercaya, jujur, sopan, dan memiliki semangat belajar tinggi.
+    Sejak awal berdiri, Assistenku berkomitmen menghadirkan sistem kerja yang tertata,
+    transparan, dan menghargai setiap kontribusi tenaga kerja. Kami ingin menjadi tempat
+    yang memberikan harapan baru, peluang baru, dan masa depan yang lebih baik bagi
+    siapa pun yang ingin bekerja dengan profesional.
   </p>
 </section>
 
 
+<!-- =============================
+     LOWONGAN
+============================= -->
 <section>
   <h2>Lowongan Tersedia</h2>
 
+  <p>
+    Berikut daftar posisi yang saat ini tersedia. Jika Anda memiliki sikap baik,
+    mau belajar, disiplin, dan bisa bertanggung jawab, Anda sudah memenuhi
+    syarat dasar untuk melamar ke Assistenku.
+  </p>
+
   <div class="card-grid">
 
+    <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu keluarga menjaga kebersihan dan kenyamanan rumah.</p>
+      <p>
+        Membantu keluarga menjaga kebersihan dan kerapian rumah dengan standar kerja
+        yang sopan, disiplin, dan profesional.
+      </p>
       <strong>Tugas:</strong>
       <ul>
-        <li>Membersihkan rumah</li>
+        <li>Pembersihan rumah</li>
         <li>Mencuci & menyetrika</li>
-        <li>Masakan dasar</li>
-        <li>Mengelola rumah tangga</li>
+        <li>Menjaga kerapian</li>
+        <li>Mengelola kebutuhan dasar rumah tangga</li>
       </ul>
-      <strong>Persyaratan:</strong>
+
+      <strong>Persyaratan Melamar:</strong>
       <ul>
-        <li>Usia minimal 18 tahun</li>
+        <li>Usia 18–50 tahun</li>
         <li>Sehat jasmani</li>
-        <li>Disiplin</li>
-        <li>Jujur</li>
+        <li>Jujur & bertanggung jawab</li>
+        <li>Bisa tinggal di tempat atau pulang-pergi</li>
       </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" 
+           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20ART."
+           target="_blank">Lamar via WhatsApp</a>
+        <a class="btn-secondary"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Posisi%20ART"
+           target="_blank">Kirim via Email</a>
+      </div>
     </div>
 
+
+    <!-- CAREGIVER -->
     <div class="card">
-      <h3>Caregiver / Pendamping Lansia</h3>
-      <p>Merawat dan mendampingi lansia dengan sabar dan profesional.</p>
+      <h3>Pendamping Lansia</h3>
+      <p>
+        Mendampingi lansia dengan penuh kesabaran, menjaga kenyamanan, keamanan,
+        dan membantu aktivitas harian.
+      </p>
       <strong>Tugas:</strong>
       <ul>
-        <li>Membantu aktivitas harian</li>
-        <li>Mengawasi jadwal obat</li>
+        <li>Pendamping aktivitas</li>
+        <li>Perawatan harian ringan</li>
         <li>Membantu mobilitas</li>
-        <li>Menjaga kenyamanan lansia</li>
+        <li>Sahabat bicara</li>
       </ul>
-      <strong>Persyaratan:</strong>
+
+      <strong>Persyaratan Melamar:</strong>
       <ul>
         <li>Usia 20–45 tahun</li>
+        <li>Sabar & tidak mudah emosi</li>
         <li>Sehat jasmani</li>
-        <li>Empati tinggi</li>
-        <li>Tidak mudah emosi</li>
+        <li>Sopan dalam komunikasi</li>
       </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" 
+           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Pendamping%20Lansia."
+           target="_blank">Lamar via WhatsApp</a>
+        <a class="btn-secondary"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Pendamping%20Lansia"
+           target="_blank">Kirim via Email</a>
+      </div>
     </div>
 
+
+    <!-- DRIVER -->
     <div class="card">
-      <h3>Sopir Pribadi</h3>
-      <p>Mengemudi secara aman dan profesional.</p>
+      <h3>Pengemudi Pribadi</h3>
+      <p>
+        Mengemudi secara aman, sopan, dan profesional untuk kebutuhan keluarga
+        maupun bisnis.
+      </p>
       <strong>Tugas:</strong>
       <ul>
-        <li>Antar jemput</li>
-        <li>Perawatan kendaraan</li>
-        <li>Navigasi jalan</li>
+        <li>Antar jemput harian</li>
+        <li>Perawatan kendaraan dasar</li>
+        <li>Navigasi & rute</li>
         <li>Mengemudi defensif</li>
       </ul>
-      <strong>Persyaratan:</strong>
+
+      <strong>Persyaratan Melamar:</strong>
       <ul>
-        <li>SIM A aktif</li>
-        <li>Berpengalaman</li>
+        <li>Memiliki SIM A aktif</li>
         <li>Disiplin waktu</li>
-        <li>Sopan</li>
+        <li>Sopan dalam sikap & ucapan</li>
+        <li>Bisa kerja lembur jika dibutuhkan</li>
       </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" 
+           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Driver."
+           target="_blank">Lamar via WhatsApp</a>
+        <a class="btn-secondary"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Driver"
+           target="_blank">Kirim via Email</a>
+      </div>
     </div>
 
+
+    <!-- TOKO -->
     <div class="card">
       <h3>Penjaga Toko</h3>
-      <p>Menangani operasional toko harian.</p>
+      <p>
+        Menangani kebutuhan operasional toko dengan pelayanan ramah dan
+        ketelitian dalam bekerja.
+      </p>
       <strong>Tugas:</strong>
       <ul>
         <li>Melayani pembeli</li>
-        <li>Menata barang</li>
-        <li>Stok barang</li>
-        <li>Menjaga kebersihan area kerja</li>
+        <li>Menata & menyiapkan barang</li>
+        <li>Mengelola stok</li>
+        <li>Menjaga kebersihan</li>
       </ul>
-      <strong>Persyaratan:</strong>
+
+      <strong>Persyaratan Melamar:</strong>
       <ul>
-        <li>Ramah</li>
-        <li>Teliti</li>
-        <li>Bisa berdiri lama</li>
-        <li>Jujur</li>
+        <li>Ramah dan komunikatif</li>
+        <li>Teliti & rapi</li>
+        <li>Siap berdiri lama</li>
+        <li>Bertanggung jawab</li>
       </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" 
+           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Penjaga%20Toko."
+           target="_blank">Lamar via WhatsApp</a>
+        <a class="btn-secondary"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Penjaga%20Toko"
+           target="_blank">Kirim via Email</a>
+      </div>
     </div>
 
+
+    <!-- HELPER -->
     <div class="card">
-      <h3>Asisten Pribadi / Helper</h3>
-      <p>Tugas operasional ringan seperti kurir dan admin sederhana.</p>
+      <h3>Asisten Operasional (Helper)</h3>
+      <p>
+        Membantu operasional ringan rumah tangga maupun kantor seperti admin,
+        kurir internal, hingga pekerjaan pendukung.
+      </p>
       <strong>Tugas:</strong>
       <ul>
-        <li>Administrasi</li>
         <li>Kurir dokumen</li>
-        <li>Operasional harian</li>
-        <li>Back-up kantor</li>
+        <li>Admin ringan</li>
+        <li>Bantuan operasional</li>
+        <li>Back-up harian</li>
       </ul>
-      <strong>Persyaratan:</strong>
+
+      <strong>Persyaratan Melamar:</strong>
       <ul>
+        <li>Cekatan & cepat belajar</li>
         <li>Komunikatif</li>
-        <li>Cekatan</li>
         <li>Disiplin</li>
-        <li>Rapi</li>
+        <li>Rapi & sopan</li>
       </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" 
+           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Asisten%20Operasional."
+           target="_blank">Lamar via WhatsApp</a>
+        <a class="btn-secondary"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Asisten%20Operasional"
+           target="_blank">Kirim via Email</a>
+      </div>
     </div>
 
   </div>
 </section>
 
 
+<!-- =============================
+     AKSES DOKUMEN GAJI
+============================= -->
 <section>
-  <h2>Akses Informasi Sistem Gaji</h2>
+  <h2>Informasi Sistem Gaji</h2>
+  <p>
+    Assistenku menyediakan dokumen resmi mengenai sistem kerja dan gaji. Dokumen hanya
+    bisa dibuka oleh pelamar serius untuk menjaga kerahasiaan internal.
+  </p>
 
-  <p>Gunakan tombol berikut untuk membuka dokumen:</p>
-
-  <!-- ISLAND BUTTON -->
   <button class="island-btn" id="btnSistemGaji">
-    Lihat Sistem Gaji
+    Buka Dokumen Sistem Gaji
   </button>
 
   <br><br>
 
-  <!-- FOOTER LOCK BUTTON -->
   <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
 </section>
 
@@ -172,5 +269,6 @@
 <footer>© 2025 Assistenku</footer>
 
 <script src="/script.js"></script>
+
 </body>
-  </html>
+</html>
